examples/wordpress/mariadb-template.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  generation: 1
  labels:
    run: mariadb
  name: mariadb
  namespace:
spec:
  replicas: 1
  selector:
    matchLabels:
      run: mariadb
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        run: mariadb
    spec:
      containers:
      - image: bitnami/mariadb:latest
        imagePullPolicy: Always
        name: mariadb
        ports:
        - containerPort: 3306
          protocol: TCP
        volumeMounts:
        - name: mariadb-data
          mountPath: /bitnami/mariadb

      dnsPolicy: ClusterFirst
      restartPolicy: Always

      volumes:
      - name: mariadb-data
        persistentVolumeClaim:
          claimName: mariadb-data

---
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  labels:
    run: mariadb
spec:
  ports:
  - protocol: TCP
    port: 3306
    targetPort: 3306
  selector:
    run: mariadb
