examples/wordpress/wordpress-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  labels:
    run: blog
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  selector:
    run: blog
  type: LoadBalancer
