examples/wordpress/blog-template.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  generation: 1
  labels:
    run: blog
  name: wordpress
  namespace:
spec:
  replicas: 1
  selector:
    matchLabels:
      run: blog
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        run: blog
    spec:
      containers:
      - image: bitnami/wordpress:latest
        imagePullPolicy: IfNotPresent
        name: wordpress
        ports:
        - containerPort: 80
          protocol: TCP
        - containerPort: 443
          protocol: TCP
        volumeMounts:
        - name: data
          mountPath: /bitnami
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      terminationGracePeriodSeconds: 10
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: wordpress
---
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  labels:
    run: blog
spec:
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  selector:
    run: blog

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: blog
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: blog.cloud.clastix.io
    http:
      paths:
      - path: /
        backend:
          serviceName: wordpress
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  generation: 1
  labels:
    run: mariadb
  name: mariadb
  namespace:
spec:
  replicas: 1
  selector:
    matchLabels:
      run: mariadb
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        run: mariadb
    spec:
      # set the pod to mount volumes as root group
      # to prevent pod fails to write on the volumes
      securityContext:
        fsGroup: 0
      containers:
      - image: bitnami/mariadb:latest
        imagePullPolicy: IfNotPresent
        name: mariadb
        ports:
        - containerPort: 3306
          protocol: TCP
        volumeMounts:
        - name: data
          mountPath: /bitnami/mariadb
      terminationGracePeriodSeconds: 10
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: mariadb

---
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  labels:
    run: mariadb
spec:
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 3306
    targetPort: 3306
  selector:
    run: mariadb
