examples/wordpress/wordpress-template.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  generation: 1
  labels:
    run: blog
  name: wordpress
  namespace:
spec:
  replicas: 1
  selector:
    matchLabels:
      run: blog
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        run: blog
    spec:
      containers:
      - image: bitnami/wordpress:latest
        imagePullPolicy: Always
        name: wordpress
        ports:
        - containerPort: 80
          protocol: TCP
        - containerPort: 443
          protocol: TCP
        volumeMounts:
        - name: wordpress-data
          mountPath: /bitnami/wordpress
        - name: apache-data
          mountPath: /bitnami/apache
        - name: php-data
          mountPath: /bitnami/php

      dnsPolicy: ClusterFirst
      restartPolicy: Always

      volumes:
      - name: wordpress-data
        persistentVolumeClaim:
          claimName: wordpress-data
      - name: apache-data
        persistentVolumeClaim:
          claimName: apache-data
      - name: php-data
        persistentVolumeClaim:
          claimName: php-data

---
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  labels:
    run: blog
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  selector:
    run: blog

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: blog
spec:
  rules:
  - host: blog.cloud.noverit.com
    http:
      paths:
      - path: /
        backend:
          serviceName: wordpress
          servicePort: 80
